# oakvar

./: .gitignore  404.html  CLA.md  LICENSE  README.md  README.rst  index.html  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflow/: cla.yml
.github/workflows/: test-small-modules.yml
ai_ml/: index.html
apache_spark/: index.html
api/config/: index.html
api/lib_util_util/: index.html
api/main/: index.html
api/module/: index.html
api/new/: index.html
api/oakvar_api/: index.html
api/store/: index.html
api/store_account/: index.html
api/system/: index.html
cli/: index.html
conf/: index.html
cravat/: __init__.py  __main__.py  admin_util.py  admindb.py  aggregator.py  annotator_options.py  base_annotator.py  base_commonmodule.py  base_converter.py  base_mapper.py  base_postaggregator.py  base_summarizer.py  cli_config.py  cli_feedback.py  cli_gui.py  cli_issue.py  cli_module.py  cli_new.py  cli_report.py  cli_run.py  cli_setup.py  cli_store.py  cli_system.py  cli_test.py  cli_util.py  cli_version.py  cmd_admin.py  cmd_gui.py  cmd_report.py  cmd_run.py  cmd_test.py  cmd_util.py  cmd_web.py  config_loader.py  constants.py  consts.py  cravat-system.template.yml  cravat.yml  cravat_admin.py  cravat_class.py  (+15 more)
cravat/annotator_template/: annotator_template.py
cravat/api/: __init__.py  config.py  issue.py  new.py  report.py  run.py  system.py  test.py  util.py
cravat/base/: aggregator.py  annotator.py  commonmodule.py  converter.py  cravat_convert.py  cravat_filter.py  mapper.py  master_converter.py  mp_runners.py  postaggregator.py  preparer.py  report_filter.py  runner.py  vcf2vcf.py
cravat/cli/: __init__.py  __main__.py  config.py  gui.py  issue.py  license.py  new.py  report.py  run.py  system.py  test.py  update.py  util.py  version.py
cravat/gui/: consts.py  job_handlers.py  multiuser.py  server.py  serveradmindb.py  store_handlers.py  system_handlers.py  system_message_db.py  system_worker.py  userjob.py  util.py  (+2 more)
cravat_master_old/: __init__.py  oc.py
cravat_next_old/: admin_util.py  base_mapper.py  cravat_convert.py  exceptions.py  mp_runners.py
cravat_old/: base_mapper.py  cravat_class.py  cravat_convert.py  cravat_test.py  cravat_util.py  oc.py  util.py  wincravat.pyw
devguide/: index.html
devguide_debugging/: index.html
devguide_modules/: index.html
devguide_testing/: index.html
devguide_workflows/: index.html
filter/: index.html
gui/: index.html
install/: index.html
install_modules/: index.html
install_system/: index.html
license/: index.html
mkdocs/: mkdocs.yml  mkgendocs.yml  oakvar_docs.md  oakvar_module_list.json  oakvar_module_list.txt  requirements.txt
oakvar/: __init__.py  __main__.py  admin_util.py  aggregator.py  annotator_options.py  base_annotator.py  base_commonmodule.py  base_converter.py  base_mapper.py  base_postaggregator.py  cli_config.py  cli_feedback.py  cli_gui.py  cli_issue.py  cli_module.py  cli_new.py  cli_report.py  cli_run.py  cli_store.py  cli_system.py  cli_test.py  cli_util.py  cli_version.py  cmd_admin.py  cmd_gui.py  cmd_report.py  cmd_run.py  cmd_test.py  cmd_util.py  cmd_web.py  config_loader.py  constants.py  consts.py  cravat.yml  cravat_admin.py  cravat_class.py  cravat_convert.py  cravat_filter.py  cravat_report.py  cravat_test.py  (+14 more)
overview/: index.html
package/: index.html
register/: index.html
scikit_learn/: index.html
search/: search_index.json
technical/: index.html
tips/: index.html
tutorial/: index.html
vcf2vcf/: index.html
(+530 files in other folders)
